# NBodyExecutor

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt  galaxy.cpp
example/shaders/: galaxy.frag  galaxy.vert
include/: BarnesHutExecutor.hpp  Cube.hpp  NaiveExecutor.hpp  OctTree.hpp  macros.hpp
include/NBodyExecutor/: BarnesHutExecutor.hpp  Body.hpp  Cube.hpp  Executor.hpp  OctTree.hpp
lib/: BarnesHutExecutor.cpp  Cube.cpp  NaiveExecutor.cpp  OctTree.cpp
lib/NBodyExecutor/: BarnesHutExecutor.cpp  Cube.cpp  NaiveExecutor.cpp  OctTree.cpp
